networking/pod-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-client
  labels:
    role: client

spec: 
  containers:
    - name: curl
      image: curlimages/curl
      command: ["sleep", "3600"]
